<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>armor</groupId>
    <artifactId>armor-parent</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>

    <!-- 	<parent> -->
    <!-- 		<groupId>com.shj</groupId> -->
    <!-- 		<artifactId>shj-parent</artifactId> -->
    <!-- 		<version>0.0.1</version> -->
    <!-- 	</parent> -->

    <modules>
        <module>armor-core</module>
        <module>armor-gateway</module>
        <module>armor-feign</module>
        <module>armor-orm</module>
        <module>armor-web</module>
        <module>armor-ws</module>
        <module>armor-codebinder</module>
    </modules>

    <!--
    ==> core ==> web ==> feign
                      ==> gateway
                      ==> codebinder
              ==> orm
    ==> ws
    -->

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 		<maven.test.skip>true</maven.test.skip> -->
        <maven.multiModuleProjectDirectory>$M2_HOME</maven.multiModuleProjectDirectory>

        <!-- Spring Boot -->
        <spring-boot.version>1.4.5.RELEASE</spring-boot.version>

        <!-- Spring Cloud -->
        <spring-cloud.version>Camden.SR6</spring-cloud.version>

        <!-- Feign -->
        <openfeign.version>9.4.0</openfeign.version>
        <feign-okhttp>9.4.0</feign-okhttp>
        <feign-form-spring.version>2.1.0</feign-form-spring.version>

        <!-- Swagger -->
        <swagger.version>2.2.2</swagger.version>

        <!-- override -->
        <lombok.version>1.16.14</lombok.version>
        <httpclient.version>4.5.3</httpclient.version>
        <commons-codec.version>1.10</commons-codec.version>
        <commons-collections.version>3.2.2</commons-collections.version>
        <commons-lang3.version>3.4</commons-lang3.version><!-- override old version 3.1 -->
        <commons-io.version>2.4</commons-io.version>

        <!-- Apache Commons -->
        <commons-beanutils.version>1.7.0</commons-beanutils.version>
        <commons-digester.version>1.8</commons-digester.version>
        <!-- 		<commons-fileupload.version>1.3.1</commons-fileupload.version> -->

        <!-- Jackson Filter -->
        <squiggly-filter-jackson.version>1.3.4</squiggly-filter-jackson.version>

        <!-- Pinyin4j -->
        <pinyin4j.version>2.5.0</pinyin4j.version>

        <!-- Zxing -->
        <zxing-core.version>3.2.1</zxing-core.version>
        <zxing-javase.version>3.0.0</zxing-javase.version>

        <!-- ImageMagick -->

        <!-- POI -->
        <poi.version>3.9</poi.version>

        <!-- Mybatis -->
        <!-- 		<mybatis.version>3.2.8</mybatis.version> -->
        <!-- 		<mybatis-spring.version>1.2.2</mybatis-spring.version> -->
        <mybatis-generator.version>1.3.2</mybatis-generator.version>
        <!-- 		<pagehelper.version>4.1.3</pagehelper.version> -->
        <mybatis-spring-boot-starter.version>1.2.0</mybatis-spring-boot-starter.version>
        <mapper-spring-boot-starter.version>1.1.0</mapper-spring-boot-starter.version>
        <pagehelper-spring-boot-starter.version>1.1.0</pagehelper-spring-boot-starter.version>

        <!-- DB DataSource -->
        <druid.version>1.0.16</druid.version>

    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- OpenFeign -->
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-jackson</artifactId>
                <version>${openfeign.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-ribbon</artifactId>
                <version>${openfeign.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-okhttp</artifactId>
                <version>${feign-okhttp}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign.form</groupId>
                <artifactId>feign-form-spring</artifactId>
                <version>${feign-form-spring.version}</version>
            </dependency>

            <!-- Swagger -->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>${swagger.version}</version>
            </dependency>


            <!-- ===================override import dependencies=================== -->

            <!-- =======use default import dependencies from compile======= -->

            <!-- Jackson -->
            <!-- dependence on spring-cloud-starter-eureka compile -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>com.fasterxml.jackson.core</groupId> -->
            <!-- 				<artifactId>jackson-databind</artifactId> -->
            <!-- 				<version>2.8.7</version> -->
            <!-- 			</dependency> -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>com.fasterxml.jackson.core</groupId> -->
            <!-- 				<artifactId>jackson-annotations</artifactId> -->
            <!-- 				<version>2.8.7</version> -->
            <!-- 			</dependency> -->

            <!-- commons-configuration -->
            <!-- dependence on spring-cloud-starter-eureka compile -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>commons-configuration</groupId> -->
            <!-- 				<artifactId>commons-configuration</artifactId> -->
            <!-- 				<version>1.8</version> -->
            <!-- 			</dependency> -->

            <!-- Guava -->
            <!-- dependence on spring-cloud-starter-eureka compile -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>com.google.guava</groupId> -->
            <!-- 				<artifactId>guava</artifactId> -->
            <!-- 				<version>18.0</version> -->
            <!-- 			</dependency> -->


            <!-- =======use default import dependencies from runtime======= -->

            <!-- commons-codec -->
            <!-- dependence on spring-cloud-starter-eureka runtime -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>commons-codec</groupId> -->
            <!-- 				<artifactId>commons-codec</artifactId> -->
            <!-- 				<version>${commons-codec.version}</version> -->
            <!-- 			</dependency> -->

            <!-- commons-collections -->
            <!-- dependence on spring-cloud-starter-eureka runtime -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>commons-collections</groupId> -->
            <!-- 				<artifactId>commons-collections</artifactId> -->
            <!-- 				<version>${commons-collections.version}</version> -->
            <!-- 			</dependency> -->

            <!-- httpclient -->
            <!-- dependence on spring-cloud-starter-eureka runtime -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>org.apache.httpcomponents</groupId> -->
            <!-- 				<artifactId>httpclient</artifactId> -->
            <!-- 				<version>${httpclient.version}</version> -->
            <!-- 			</dependency> -->

            <!-- commons-jxpath -->
            <!-- dependence on spring-cloud-starter-eureka runtime -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>commons-jxpath</groupId> -->
            <!-- 				<artifactId>commons-jxpath</artifactId> -->
            <!-- 				<version>1.3</version> -->
            <!-- 			</dependency> -->

            <!-- commons-math -->
            <!-- dependence on spring-cloud-starter-eureka runtime -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>org.apache.commons</groupId> -->
            <!-- 				<artifactId>commons-math</artifactId> -->
            <!-- 				<version>2.2</version> -->
            <!-- 			</dependency> -->

            <!-- aopalliance -->
            <!-- dependence on spring-cloud-starter-eureka runtime -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>aopalliance</groupId> -->
            <!-- 				<artifactId>aopalliance</artifactId> -->
            <!-- 				<version>1.0</version> -->
            <!-- 			</dependency> -->


            <!-- =======override default import dependencies from compile======= -->

            <!-- Lombok -->
            <!-- dependence on feign-form-spring compile -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>


            <!-- =======override default import dependencies from runtime======= -->

            <!-- commons-lang3 -->
            <!-- dependence on spring-cloud-starter-zuul runtime -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <!-- commons-io -->
            <!-- dependence on spring-cloud-starter-zuul runtime -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>

            <!-- ===================override import dependencies=================== -->


            <!-- ===================other third party dependencies=================== -->

            <!-- commons-beanutils -->
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons-beanutils.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- commons-digester -->
            <dependency>
                <groupId>commons-digester</groupId>
                <artifactId>commons-digester</artifactId>
                <version>${commons-digester.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- commons-fileupload -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>commons-fileupload</groupId> -->
            <!-- 				<artifactId>commons-fileupload</artifactId> -->
            <!-- 				<version>${commons-fileupload.version}</version> -->
            <!-- 			</dependency> -->

            <dependency>
                <groupId>com.github.bohnman</groupId>
                <artifactId>squiggly-filter-jackson</artifactId>
                <version>${squiggly-filter-jackson.version}</version>
            </dependency>

            <!-- Pinyin4j -->
            <dependency>
                <groupId>com.belerweb</groupId>
                <artifactId>pinyin4j</artifactId>
                <version>${pinyin4j.version}</version>
            </dependency>

            <!-- Zxing -->
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>core</artifactId>
                <version>${zxing-core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>javase</artifactId>
                <version>${zxing-javase.version}</version>
            </dependency>

            <!-- ImageMagick -->

            <!-- POI -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${poi.version}</version>
            </dependency>

            <!-- MyBatis -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>org.mybatis</groupId> -->
            <!-- 				<artifactId>mybatis</artifactId> -->
            <!-- 				<version>${mybatis.version}</version> -->
            <!-- 			</dependency> -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>org.mybatis</groupId> -->
            <!-- 				<artifactId>mybatis-spring</artifactId> -->
            <!-- 				<version>${mybatis-spring.version}</version> -->
            <!-- 			</dependency> -->
            <!-- 			<dependency> -->
            <!-- 				<groupId>com.github.pagehelper</groupId> -->
            <!-- 				<artifactId>pagehelper</artifactId> -->
            <!-- 				<version>${pagehelper.version}</version> -->
            <!-- 			</dependency> -->

            <!-- MyBatis Spring Boot -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis-spring-boot-starter.version}</version>
            </dependency>

            <!-- MyBatis Mapper Spring Boot -->
            <dependency>
                <groupId>tk.mybatis</groupId>
                <artifactId>mapper-spring-boot-starter</artifactId>
                <version>${mapper-spring-boot-starter.version}</version>
            </dependency>

            <!-- MyBatis PageHelper Spring Boot -->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper-spring-boot-starter.version}</version>
            </dependency>

            <!-- MyBatis Generator -->
            <dependency>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-core</artifactId>
                <version>${mybatis-generator.version}</version>
            </dependency>


            <!-- DB DataSource -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid</artifactId>
                <version>${druid.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <!-- ==========for parameter reflection with jdk1.8========== -->
                    <!-- configure ide jdk compile: "store information about method parameters" -->
                    <!-- 					<compilerArgs> -->
                    <!--                         <arg>-parameters</arg> -->
                    <!--                     </compilerArgs> -->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <!-- 				<version>2.9</version> -->
                <!-- 				<dependencies> -->
                <!-- 					<dependency> -->
                <!-- 						<groupId>org.apache.maven.surefire</groupId> -->
                <!-- 						<artifactId>surefire-junit47</artifactId> -->
                <!-- 						<version>2.19</version> -->
                <!-- 					</dependency> -->
                <!-- 				</dependencies> -->
                <!-- 				<configuration> -->
                <!-- 					<skipTests>true</skipTests> -->
                <!-- 				</configuration> -->

                <configuration>
                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
                    <additionalClasspathElements>
                        <additionalClasspathElement>
                            ${basedir}/target/test-classes
                        </additionalClasspathElement>
                    </additionalClasspathElements>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/TestConstants.java</exclude>
                    </excludes>
                    <forkMode>pertest</forkMode>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.16.14.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>